# the_scraibe

./: .env-default  .gitignore  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt  settings.py
.streamlit/: config.toml
documents/: example_document.md
images/: the_scribe-100.xcf
src/: cli.py  dashboard.py  ui.py
src/core/: __init__.py  formats.py  llm.py  locks.py  markdown_handler.py  versioning.py
src/pages/: 01-documents.py  01-documents.py.notused  10-write.py  20-llm.py  20-llm.py.notused
src/st_include/: app_ai.py  app_docs.py  app_users.py  app_utils.py  documents.py  users.py  utils.py
tests/: test_cli.py  test_locks.py  test_markdown.py  test_markdown_auto_label.py  test_markdown_repair.py  test_markdown_validation.py  test_versioning.py
